<resources>
    <string name="app_name">Saya Suka</string>
    <string name="cat_name">Kategori</string>
    <string name="favorite_name">Kesukaan</string>
    <string name="minuman_name">Minuman</string>
    <string name="duren_name">Informasi Kuliner</string>
    <string name="about_name">Tentang Aplikasi</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Saya Suka</string>
    <string name="nav_header_subtitle">Saya Suka, Kamu Suka</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kesukaan">Kesukaan</string>
    <string name="kategori">Kategori</string>
    <string name="resep_makanan">Resep Makanan</string>
    <string name="resep_minuman">Resep Minuman</string>
    <string name="dunia_kuliner">Dunia Kuliner</string>
    <string name="communicate">Lainnya</string>
    <string name="rating">Rating</string>
    <string name="aplikasi_lainnya">Aplikasi Lainnya</string>
    <string name="share">Share</string>
    <string name="about">About</string>

    <string name="pesan_keluar">Mau Keluar?</string>
    <string name="yes">Yes</string>
    <string name="beri_love">Beri Love</string>
    <string name="app_more">Aplikasi Lainnya</string>

    <string name="playstore_app_more">https://play.google.com/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resep_title">Resep</string>
    <string name="kategori_title">Kategori</string>
    <string name="kesukaan_title">Kesukaan</string>
    <string name="duren_title">INFO</string>
    <string name="tidak_ada_koneksi_internet">Tidak Ada Koneksi Internet</string>
    <string name="logo_di_about">logo di about</string>
    <!-- teks di share menu-->
    <string name="teksShare">Handoyo Oficial \n\n
        Dapatkan Informasi tentang Aplikasi Lainnya.\n
        kunjungi https://skytacco.web.id \n
        atau hubungi email REALTH99@GMAIL.COM</string>
    <string name="gambar_resep">gambar resep</string>
    <string name="sembarang">sembarang</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="search">Search</string>
    <!--dihalaman detail-->
    <string name="tambah_favorite">Ditambahkan ke daftar Favorite</string>
    <string name="buang_favorite">Dibuang dari Daftar Favorite</string>

    <string name="menu_share">Share</string>
    <string name="failed_connect_network">Tidak Ada Koneksi Internet!!</string>
    <string name="image_kategori">image kategori</string>
    <string name="tidak_ada_resep_favorit_ditemukan">Tidak Ada Resep Favorit Ditemukan</string>
    <string name="jika_tidak_ditemukan">jika tidak ditemukan</string>

</resources>
