<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resep"
            android:icon="@drawable/ic_baseline_restaurant_menu_24px"
            android:title="@string/resep_makanan" />
        <item
            android:id="@+id/nav_resep2"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/resep_minuman" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/kesukaan" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24px"
            android:title="@string/kategori" />
        <item
            android:id="@+id/nav_duren"
            android:icon="@drawable/ic_baseline_language_24px"
            android:title="@string/dunia_kuliner" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_rating"
                android:icon="@drawable/ic_baseline_rate_review_24px"
                android:title="@string/rating" />
            <item
                android:id="@+id/nav_more"
                android:icon="@drawable/ic_baseline_apps_24px"
                android:title="@string/aplikasi_lainnya" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
